manifests/portainer-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer-agent
  labels:
    name: portainer-agent
